Добавить параметры типа и направления сортировки для метода контроллера getBooks, добавить генерацию метамоделей для сущностей, добавить роли User, Admin и разграничить доступ по этим ролям, реализовать метод загрузки обложки для книги с ее сохранением в папке на диске, написать юнит тесты для методов getBookById и register.