@@ -1,19 +1,23 @@
 package com.example.webstore.model.entity;
 
+import com.example.webstore.model.enums.Role;
 import jakarta.persistence.AttributeOverride;
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
 import jakarta.persistence.Table;
 import jakarta.validation.constraints.NotBlank;
 import java.sql.Timestamp;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 import lombok.NoArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 @Builder
@@ -50,9 +54,13 @@ public class User extends BaseEntity implements UserDetails {
   @Column(name = "last_name")
   private String lastName;
 
+  @Enumerated(EnumType.STRING)
+  @Column(name = "role")
+  private Role role;
+
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-    return Collections.emptyList();
+    return List.of(new SimpleGrantedAuthority(role.name()));
   }
 
   @Override
